--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: kebormed_mobile
-description: "A new Flutter project."
+description: "This Flutter application demonstrates the implementation of a splash screen, login functionality with state management using BLoC, and navigation to a user list and details page."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
